# WTFCSV

./: .gitignore  CMakeLists.txt  README.md
include/: wtfcsv.h
src/: main.cpp  wtfcsv.cpp
