CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4 FATAL_ERROR)

SET(PROJECT_NAME "wtfcsv")
SET(SRC_DIR "src")
SET(INCLUDE_DIR "include")
SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)

PROJECT(${PROJECT_NAME})

SET(SRC_FILE ${PROJECT_SOURCE_DIR}/${SRC_DIR}/${PROJECT_NAME}.cpp)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/${INCLUDE_DIR})

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_FILE})
